<resources>
    <!--    주석처리하면서 사용하기-->
    <string name="app_name">Passion</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="study">공부, 혼자 하지 말고 열품타에서 함께 하세요!</string>
    <string name="signInForMemvership">회원가입 / 로그인</string>
    <string name="newStartMemvership">새로 시작하기</string>
    <string name="use_without_signIn">가입없이 이용하기</string>
    <string name="pallo">Pallo</string>
    <string name="account">계정</string>
    <string name="enterEmail">이메일 입력</string>
    <string name="enterPW">비밀번호 입력</string>
    <string name="checkPW">비밀번호 확인</string>
    <!--SignUpStartActivity-->
    <string name="login">로그인</string>
    <!--activity_find_email_dialog-->
    <string name="findEmail">이메일 찾기</string>
    <string name="findPW">비밀번호 찾기</string>
    <string name="or">또는</string>
    <string name="kakaoLogin">카카오톡으로 로그인</string>
    <string name="naverLogin">네이버로 로그인</string>
    <string name="yetAccount">아직 계정을 안만드셨나요?</string>
    <!--SignUpStart-->
    <string name="toLogin">가입하기</string>
    <string name="passionTimer">열정 품은 타이머</string>
    <string name="SignInMembership">회원가입</string>
    <string name="findEmailAccount">이메일 계정 찾기</string>
    <string name="checkEmailAccount">이메일 계정 확인</string>
    <string name="information">﻿·\t이메일로 가입한 계정이 있는지 확인합니다.\n﻿·\t카카오톡/네이버로 가입했다면 이전화면에서 카카오톡/네이버 아이콘을 클릭해주세요.</string>
    <string name="makeNickname">닉네임 만들기</string>
    <!--activity_find_email_dialog-->
    <string name="enterNickname">닉네임을 입력하세요</string>
    <string name="pleaseEnterNickname">변경하실 닉네임을 입력하세요</string>
    <string name="letterByte">0/60 Bytes</string>
    <string name="completion">변경하기</string>
    <string name="d_day">D-Day를 추가해주세요.</string>
    <string name="date">오늘 날짜</string>
    <string name="time">00 : 00 : 00</string>
    <string name="goal">목표/과목</string>
    <string name="rest">휴식 00시간 00분 00초</string>
    <string name="studytime">공부시간</string>
    <string name="addSubject">과목 추가하기</string>
    <string name="toic">토익</string>
    <string name="title_dialog">목표/과목</string>
    <string name="dialog_1">To-Do 만들기</string>
    <string name="dialog_2">To-Do 수정</string>
    <string name="dialog_3">과목 이름/색상 변경</string>
    <string name="dialog_4">과목 순서 변경</string>
    <string name="dialog_5">과목 삭제</string>
    <string name="cancel">취소</string>
    <string name="enterToDo">할일을 입력해주세요.</string>
    <!--FragmentHomeDialog-->
    <string name="check">확인</string>
    <string name="add">추가</string>
    <string name="nameOfSubjectToMeasure">측정할 과목 이름</string>
    <string name="example">ex) 수학, 영어, 과학, 한국사..</string>
    <string name="colorSubject">과목 색상</string>
    <string name="startEmail">이메일로 시작하기</string>
    <string name="startFacebook">페이스북으로 시작하기</string>
    <string name="startKakao">카카오로 시작하기</string>
    <string name="startNaver">네이버로 시작하기</string>
    <!--FragmentHomeDialog-->
    <string name="infoTitle">기록삭제,수정,휴식 도움말</string>
    <!--FragmentHomeDialog-->
    <string name="infoMessage">* 새별 5시에 날짜와 시간이 초기화 됩니다.\n\n* 휴식기록 따로 하고싶지 않으시다면 설정에서 기능을 끌 수 있습니다.\n\n* 휴식알림은 앱알림을 켜짐으로 설정해두어야 합니다.\n\n*공부,휴식 기록 삭제, 수정은 통계 탭 타임라임에서 가능합니다.</string>
    <!--activity_app_start-->
    <string name="month">0000년 7월</string>
    <!--activity_app_start-->
    <string name="nickname">닉네임</string>
    <string name="day">일</string>
    <string name="sunday">일</string>
    <string name="monthday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="hour1">0~4시간</string>
    <string name="hour2">4~7시간</string>
    <string name="hour3">7~10시간</string>
    <string name="hour4">10+시간</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="notice">공지사항</string>
    <string name="offline">오프라인 모드</string>
    <string name="function">계정/기능 설정</string>
    <string name="days">D-Days</string>
    <string name="help">도움말</string>
    <string name="inquiry">문의하기</string>
    <string name="friedAdd">친구초대</string>
    <string name="review">리뷰 남기기</string>
    <string name="logout">로그아웃</string>
    <string name="status">상태메세지를 입력해주세요.</string>
    <string name="howToLogin">가입방법</string>
    <string name="howToLoginStatus">789_skymert@naver.com</string>
    <string name="category">카테고리</string>
    <string name="categoryStatus">이직</string>
    <string name="colorTheme">테마색상</string>
    <string name="allStudyTime">총 공부시간</string>
    <string name="allTime">최대 집중 시간</string>
    <string name="subject">과목</string>
    <string name="curTime">현재 집중시간</string>
    <string name="calender_day">7월 6일 월요일</string>
    <string name="useApp">(허용앱 0초)</string>
    <string name="startTime">시작시간</string>
    <string name="endTime">종료시간</string>
    <string name="subjectStudy">과목별 공부량</string>
    <string name="statusMessage">상태메세지 변경하기</string>
    <string name="etStatusMessage">상태메세지를 입력해 주세요.</string>
    <string name="zero">상태메세지를 입력해 주세요.</string>
    <string name="bytes">0/200 Bytes</string>
    <string name="phoneLock">폰 잠금</string>F
    <string name="enterContents">입력내용</string>
    <string name="enterDay">2020. 0. 0</string>
    <string name="DdayName">D-day 명</string>
    <string name="addDdayName">D-Day 명을 입력해주세요</string>
    <string name="date_calender">날짜</string>
    <string name="july">2020년 7월 8일</string>
    <string name="addContents">추가하기</string>
    <string name="functionSetting">계정/기능 설정</string>
    <string name="rankApp">열품타 이직 랭킹</string>
    <string name="statusMessageFunction">상태메세지</string>
    <string name="changePw">비밀번호 변경</string>
    <string name="zeroPeople">0명</string>
    <string name="cutOffUser">차단유저</string>
    <string name="canUseRest">휴식 기능 사용</string>
    <string name="allowApp">허용앱 설정</string>
    <string name="banApp">금지앱 설정</string>
    <string name="Withdrawal">탈퇴하기</string>
    <string name="changeNickname">* 닉네임 변경은 5분뒤 적용됩니다.</string>

    <!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->


</resources>