<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_notice"
            android:icon="@drawable/ic_notice"
            android:title="@string/notice"/>
        <item android:id="@+id/nav_offline"
            android:icon="@drawable/ic_offline"
            android:title="@string/offline"/>
        <item android:id="@+id/nav_function"
            android:icon="@drawable/ic_function"
            android:title="@string/function"/>
        <item android:id="@+id/nav_days"
            android:icon="@drawable/ic_days"
            android:title="@string/days"/>
        <item android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>
        <item android:id="@+id/nav_inquiry"
            android:icon="@drawable/ic_inquiry"
            android:title="@string/inquiry"/>
        <item android:id="@+id/nav_friendAdd"
            android:icon="@drawable/ic_friend_add"
            android:title="@string/friedAdd"/>
        <item android:id="@+id/nav_review"
            android:icon="@drawable/ic_review"
            android:title="@string/review"/>
        <item android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>