<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/title_dialog"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dialog_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dialog_1"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_dialog_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dialog_2"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_dialog_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dialog_3"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_dialog_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dialog_4"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_dialog_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dialog_5"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="20dp"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack"
        android:textSize="15dp" />
</LinearLayout>