<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/iv_find_pw_keyboard_left"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_keyboard_left"
        android:tint="@color/colorOrange" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passionTimer"
        android:textColor="@color/colorBlack"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/SignInMembership"
        android:textColor="@color/colorOrange"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:text="@string/account"
        android:textColor="@color/colorOrange" />

    <EditText
        android:id="@+id/et_sign_up_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/coloLightGrayV2"
        android:hint="@string/enterEmail"
        android:lines="1"
        android:paddingBottom="20dp"
        android:textColor="@color/coloLightGrayV2"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_sign_up_enter_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/coloLightGrayV2"
        android:hint="@string/enterPW"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingBottom="20dp"
        android:textColor="@color/coloLightGrayV2"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_sign_up_enter_check_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/coloLightGrayV2"
        android:hint="@string/checkPW"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingBottom="20dp"
        android:textColor="@color/coloLightGrayV2"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_sign_up_login"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape_orange"
        android:text="@string/toLogin"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>