<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_d_days_enter_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterContents"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_d_days_enterDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterDay" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_d_days_d_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/days"
        android:textSize="25sp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/iv_d_days_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:src="@drawable/ic_more" />
</LinearLayout>