<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/tv_nav_drawer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/nickname"
        android:textColor="@color/colorOrange"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_nav_header_status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_shape_gray"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/status"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/howToLogin"
            android:textColor="@color/colorHeader"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_nav_header_log_in_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/howToLoginStatus"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@color/colorHeader"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_nav_header_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/categoryStatus"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/colorTheme"
            android:textColor="@color/colorHeader"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null" />

        <View
            android:id="@+id/v_nav_header_theme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/colorOrange" />
    </LinearLayout>
</LinearLayout>