<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_dialogIn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_dialogIn_EnterToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/enterToDo"
        android:inputType="text"
        android:scrollHorizontally="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialogIn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="20dp"
            android:text="@string/cancel"
            android:textColor="@color/colorBlue"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_dialogIn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="20dp"
            android:text="@string/check"
            android:textColor="@color/colorBlue"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>