<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_fragment_home_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoTitle"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_fragment_home_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/infoMessage"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tv_fragment_home_dialog_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:text="@string/check"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />
</LinearLayout>