<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.passion.src.pallomain.models.PalloSignInForMembershipActivity">

    <ImageView
        android:id="@+id/iv_palloSign_keyboard_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_left"
        android:tint="@color/colorOrange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_palloSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_palloSign_keyboard_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/account"
            android:textColor="@color/colorOrange" />

        <EditText
            android:id="@+id/et_palloSign_enterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGray"
            android:hint="@string/enterEmail"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/et_palloSign_enterPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGray"
            android:hint="@string/enterPW"
            android:paddingBottom="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_palloSing_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_palloSign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_palloSing_Login">

        <TextView
            android:id="@+id/tv_palloSing_findEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/findEmail"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_palloSing_findPW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/findPW"
            android:textSize="15dp"

            />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
